--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <button id="shopToggle" class="button shop-button">Shop</button>
     <div class="game-container">
         <h1>Cookie Clicker</h1>
-        <img id="cookie" class="cookie" src="https://upload.wikimedia.org/wikipedia/commons/6/69/Chocolate_Chip_Cookie_%28cropped%29.jpg" alt="Cookie">
+        <img id="cookie" class="cookie" src="cookie.jfif" alt="Cookie">
     </div>
     
     <div id="shop" class="shop-modal">
