--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
         <button class="shop-item close-shop" id="closeShop">Schließen</button>
     </div>
 
-    <audio id="clickSound" src="click.mp3"></audio>
-    <audio id="purchaseSound" src="purchase.mp3"></audio>
+    <audio id="clickSound" src="cookie-saund.mp3"></audio>
+    <audio id="purchaseSound" src="cookie-saund.mp3"></audio>
 
     <script>
         let score = 0;
