--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <img id="shopToggle" class="shop-button" src="shop-icon.png" alt="Shop">
     <div class="game-container">
         <h1>Cookie Clicker</h1>
-        <img id="cookie" class="cookie" src="https://upload.wikimedia.org/wikipedia/commons/6/69/Chocolate_Chip_Cookie_%28cropped%29.jpg" alt="Cookie">
+        <img id="cookie" class="cookie" src="cookie-icon.png" alt="Cookie">
     </div>
     
     <div id="shop" class="shop-modal">
