--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <body class="dark-mode">
     <p id="score" class="score-container">Cookies: 0</p>
     <button id="themeToggle" class="button theme-button">Dark/Light Mode</button>
-    <img id="shopToggle" class="shop-button" src="shop-icon.png" alt="Shop">
+    <img id="shopToggle" class="shop-button" src="shop-image.png" alt="Shop">
     <div class="game-container">
         <h1>Cookie Clicker</h1>
         <img id="cookie" class="cookie" src="cookie-icon.png" alt="Cookie">
