--- a/index.html
+++ b/index.html
@@ -38,11 +38,6 @@
         .button:hover {
             transform: scale(1.1);
         }
-        .theme-button {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-        }
         .shop-button {
             position: absolute;
             top: 20px;
@@ -50,14 +45,6 @@
             cursor: pointer;
             width: 50px;
             height: 50px;
-        }
-        .light-mode {
-            background-color: white;
-            color: black;
-        }
-        .dark-mode {
-            background-color: #222;
-            color: white;
         }
         .cookie {
             width: 250px;
@@ -78,8 +65,10 @@
             padding: 30px;
             border-radius: 10px;
             text-align: center;
-            width: 300px;
+            width: 500px;
             box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.2);
+            overflow-y: scroll;
+            max-height: 80%;
         }
         .shop-modal h2 {
             margin-bottom: 20px;
@@ -99,6 +88,10 @@
             background: #777;
             transform: scale(1.05);
         }
+        .shop-item:disabled {
+            background-color: #333;
+            cursor: not-allowed;
+        }
         .close-shop {
             margin-top: 20px;
             background: red;
@@ -107,7 +100,6 @@
 </head>
 <body class="dark-mode">
     <p id="score" class="score-container">Cookies: 0</p>
-    <button id="themeToggle" class="button theme-button">Dark/Light Mode</button>
     <img id="shopToggle" class="shop-button" src="shop-image.png" alt="Shop">
     <div class="game-container">
         <h1>Cookie Clicker</h1>
@@ -123,16 +115,20 @@
         <button class="shop-item close-shop" id="closeShop">Schließen</button>
     </div>
 
-    <audio id="clickSound" src="cookie-saund.mp3"></audio>
-    <audio id="purchaseSound" src="cookie-saund.mp3"></audio>
+    <audio id="clickSound" src="cookie-sound.mp3"></audio>
+    <audio id="purchaseSound" src="cookie-sound.mp3"></audio>
 
     <script>
         let score = 0;
         let autoClickerActive = false;
         let doubleClickActive = false;
+        let isDragging = false;
+        let lastX, lastY;
+        let clickSpeed = 100; // Klickgeschwindigkeit in Millisekunden (100ms pro Klick)
+
+        // Get elements
         const cookie = document.getElementById("cookie");
         const scoreDisplay = document.getElementById("score");
-        const themeToggle = document.getElementById("themeToggle");
         const shopToggle = document.getElementById("shopToggle");
         const shop = document.getElementById("shop");
         const closeShop = document.getElementById("closeShop");
@@ -143,18 +139,52 @@
         const clickSound = document.getElementById("clickSound");
         const purchaseSound = document.getElementById("purchaseSound");
 
-        cookie.addEventListener("click", () => {
-            clickSound.play();
-            let increment = doubleClickActive ? 2 : 1;
-            score += increment;
+        // Cookie Clicker: Normal Click Funktionalität
+        function clickCookie() {
+            score += 1;
             scoreDisplay.textContent = `Cookies: ${score}`;
+            clickSound.play();
+        }
+
+        let clickInterval;
+        cookie.addEventListener("mousedown", () => {
+            clickInterval = setInterval(clickCookie, clickSpeed); // Klickgeschwindigkeit erhöhen
         });
 
-        themeToggle.addEventListener("click", () => {
-            document.body.classList.toggle("light-mode");
-            document.body.classList.toggle("dark-mode");
+        cookie.addEventListener("mouseup", () => {
+            clearInterval(clickInterval); // Stoppt den kontinuierlichen Klick
         });
 
+        cookie.addEventListener("mouseleave", () => {
+            clearInterval(clickInterval); // Stoppt den kontinuierlichen Klick, wenn der Mauszeiger den Keks verlässt
+        });
+
+        // Drag-Klick: Wenn der Benutzer auf den Keks zieht
+        cookie.addEventListener("mousedown", (e) => {
+            isDragging = true;
+            lastX = e.clientX;
+            lastY = e.clientY;
+        });
+
+        cookie.addEventListener("mousemove", (e) => {
+            if (isDragging) {
+                const dx = e.clientX - lastX;
+                const dy = e.clientY - lastY;
+                if (Math.abs(dx) > 5 || Math.abs(dy) > 5) {
+                    score += 1;
+                    scoreDisplay.textContent = `Cookies: ${score}`;
+                    clickSound.play();
+                    lastX = e.clientX;
+                    lastY = e.clientY;
+                }
+            }
+        });
+
+        cookie.addEventListener("mouseup", () => {
+            isDragging = false;
+        });
+
+        // Shop-Logik
         shopToggle.addEventListener("click", () => {
             shop.style.display = "block";
         });
@@ -162,6 +192,64 @@
         closeShop.addEventListener("click", () => {
             shop.style.display = "none";
         });
+
+        // Auto-Clicker kaufen
+        autoClicker.addEventListener("click", () => {
+            if (score >= 10 && !autoClicker.disabled) {
+                score -= 10;
+                autoClickerActive = true;
+                autoClicker.disabled = true; // Deaktiviert den Button nach dem Kauf
+                updateScore();
+                startAutoClicker(); // Starte den Auto-Clicker
+                purchaseSound.play();
+            }
+        });
+
+        // Doppelte Cookies kaufen
+        doubleClick.addEventListener("click", () => {
+            if (score >= 50 && !doubleClick.disabled) {
+                score -= 50;
+                doubleClickActive = true;
+                doubleClick.disabled = true; // Deaktiviert den Button nach dem Kauf
+                updateScore();
+                purchaseSound.play();
+            }
+        });
+
+        // Goldener Keks kaufen
+        goldenCookie.addEventListener("click", () => {
+            if (score >= 200 && !goldenCookie.disabled) {
+                score -= 200;
+                goldenCookie.disabled = true; // Deaktiviert den Button nach dem Kauf
+                updateScore();
+                purchaseSound.play();
+            }
+        });
+
+        // Mega-Klick kaufen
+        megaClick.addEventListener("click", () => {
+            if (score >= 500 && !megaClick.disabled) {
+                score -= 500;
+                megaClick.disabled = true; // Deaktiviert den Button nach dem Kauf
+                updateScore();
+                purchaseSound.play();
+            }
+        });
+
+        // Funktion, die den Auto-Clicker startet
+        function startAutoClicker() {
+            setInterval(() => {
+                if (autoClickerActive) {
+                    score += 1;
+                    scoreDisplay.textContent = `Cookies: ${score}`;
+                }
+            }, 1000); // Alle 1 Sekunde ein Klick
+        }
+
+        // Score aktualisieren
+        function updateScore() {
+            scoreDisplay.textContent = `Cookies: ${score}`;
+        }
     </script>
 </body>
 </html>
